<resources>
    <string name="app_name">Quizlingo</string>
    <string name="buttonStart">Spiel starten</string>

    <string name="textViewGameSelfName">Claire</string>
    <string name="textViewGameSelfPoints">0</string>
    <string name="textViewGameOtherName">Marc</string>
    <string name="textViewGameOtherPoints">0</string>
    <string name="textViewGameQuestionCount">Pregunta 1 de 4</string>
    <string name="textViewGameQuestion">Lorem ipsum dolor sit amet, consectetur adipiscing elit?</string>
    <string name="buttonGameA">A</string>
    <string name="buttonGameB">B</string>
    <string name="buttonGameC">C</string>
    <string name="buttonGameD">D</string>
</resources>